Resolves #1342 Open Redirect Vulnerability

--- a/src/Smartstore.Web/Views/Identity/RegisterResult.cshtml
+++ b/src/Smartstore.Web/Views/Identity/RegisterResult.cshtml
@@ -2,7 +2,7 @@
     Assets.AppendTitleParts(T("PageTitle.Register"));
 
     var continueUrl = Context.Request.Query["returnUrl"].ToString();
-    if (!continueUrl.HasValue())
+    if (!Url.IsLocalUrl(continueUrl))
     {
         continueUrl = Url.RouteUrl("Homepage");
     }
